# mini_quadrotor_mcu

./: .gitignore  CMakeLists.txt
fly_contorl_v1.0/: CMakeLists.txt
fly_contorl_v1.0/board_test/: CMakeLists.txt  main.cpp
fly_contorl_v1.0/fly_control/: CMakeLists.txt  comm_controller.hpp  config.hpp  flash_controller.hpp  main.cpp  pid_contorller.hpp  public_func.hpp  sensor_controller.hpp  task_handler.hpp
fly_contorl_v1.0/hardware_test/: CMakeLists.txt  hw_config.h  main.cpp
fly_control/: CMakeLists.txt  communicator.cpp  communicator.h  config.h  main.cpp  rp2040_interface.cpp  rp2040_interface.h  sensor.cpp  sensor.h
remote_control/: CMakeLists.txt  ascii_character.h  main.cpp  oled_disp.cpp
sensor_test/: CMakeLists.txt
sensor_test/battery_capacity_test/: CMakeLists.txt  main.cpp
sensor_test/battery_consume_test/: CMakeLists.txt  main.cpp
sensor_test/load_sensor_test/: CMakeLists.txt  main.cpp
sensor_test/mpu6050/: CMakeLists.txt
sensor_test/mpu6050/mpu6050_basic/: CMakeLists.txt  main.cpp
sensor_test/mpu6050/mpu6050_driver_test/: CMakeLists.txt  main.cpp
sensor_test/mpu6050/mpu6050_filter/: CMakeLists.txt  main.cpp
sensor_test/mpu6050/mpu6050_kalman1/: CMakeLists.txt  main.cpp
sensor_test/mpu6050/mpu_test/: CMakeLists.txt  main.cpp
sensor_test/pwm_single_motor/: CMakeLists.txt  main.cpp
sensor_test/pwm_test/: CMakeLists.txt  main.cpp
sensor_test/single_motor_balance/: CMakeLists.txt  main.cpp
