add_subdirectory(mpu6050)
add_subdirectory(pwm_test)
add_subdirectory(pwm_single_motor)

# 2024年1月3日 project used to test single motor balance
add_subdirectory(single_motor_balance)
# 2024年1月4日 add hx711 load sensor test
add_subdirectory(load_sensor_test)
# 2024年1月14日 battery consume test
add_subdirectory(battery_consume_test)
add_subdirectory(battery_capacity_test)